--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 			embeddedservice_bootstrap.init(
 				'00DD4000000Ht4B',
-				'LiveChatMessagingChannel',
-				'https://ex1731392600076--sdodev.sandbox.my.site.com/ESWLiveChatMessagingChann1754468135044',
+				'LiveChatToHost',
+				'https://ex1731392600076--sdodev.sandbox.my.site.com/ESWLiveChatToHost1756139007305',
 				{
 					scrt2URL: 'https://ex1731392600076--sdodev.sandbox.my.salesforce-scrt.com'
 				}
@@ -70,7 +70,7 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://ex1731392600076--sdodev.sandbox.my.site.com/ESWLiveChatMessagingChann1754468135044/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://ex1731392600076--sdodev.sandbox.my.site.com/ESWLiveChatToHost1756139007305/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 </body>
 </html>
