--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </main>
 
   <footer>
-    &copy; 2025 My Company
+    &copy; 2025 My Company !
   </footer>
 
   <script type='text/javascript'>
